[tool.poetry]
name = "paper-summarizer-crewai"
version = "0.1.0"
description = ""
authors = ["Paresh Pradhan <pareshppp@gmail.com>"]
readme = "README.md"
packages = [{include = "paper_summarizer_crewai"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
